# platform

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSING.md  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
IEC 61131-3/: Readme.md
IEC 61131-3/osoLadder/: index.html  osological.css  osological.js
OS/: README.md
OS/ARM/: README.md
OS/x64/: README.md
api/: README.md
api/mcp/: README.md
api/mcp/reference/: mcp_client.py  mcp_server.py
api/openapi/: README.md  osologic-admin-api.yaml
api/rest/: README.md
api/rest/reference/: osologic_rest_server.py
api/websocket/: protocol.md
bsp/: README.md
ci/: README.md
cli/: README.md
cli/oso-strip-hass/: README.md  integrations.txt  strip.py
contrib/: README.md
core/: Doxyfile  Makefile  README.md  compexe.sh  main.cpp
core/common/: async_logger.cpp  async_logger.hpp  debug.hpp  errors.cpp  errors.hpp  utils.cpp  utils.hpp
core/communication/channels/: Ichannel.hpp  rs485_channel.cpp  rs485_channel.hpp  spi_channel.cpp  spi_channel.hpp  tcp_channel.cpp  tcp_channel.hpp
core/communication/protocols/: Iprotocol.cpp  Iprotocol.hpp
core/database/: PLC_config.sql  database.cpp  database.hpp  plc_osologic_database.sql
core/hardware/: IModule.hpp  aggregator_module.cpp  aggregator_module.hpp  gpio.cpp  gpio.hpp  leds.cpp  leds.hpp  module.cpp  module.hpp  plc.cpp  plc.hpp
core/osodb/: CMakeLists.txt  README.md
core/osodb/adapters/: README.md  adapter.hpp  factory.hpp  mariadb_adapter.hpp  postgres_adapter.cpp  postgres_adapter.hpp  sql_backend.cpp  sql_backend.hpp  sqlite_adapter.cpp  sqlite_adapter.hpp
core/osodb/adapters/mcu/: mcudb.cpp  mcudb.hpp  mcustore.cpp  mcustore.hpp
core/osodb/bindings/c/: README.md  osodb_c.cpp  osodb_c.h
core/osodb/include/: osodb.hpp
core/osodb/src/: osodb.cpp
core/osodb/tests/: test_mcudb.cpp  test_mcustore.cpp  test_osodb.cpp  test_sql_backend.cpp
core/osokernel/: README.md
core/osoruntime/: README.md
core/tasks/: cycleStats.cpp  databaseSync.cpp  ledsSync.cpp  plcDataSync.cpp  tasks.hpp  timer.cpp
docs/: LICENSE  README.md  connectivity.md
docs/deployment/: README.md  baremetal.md  orange-pi.md  raspberry-pi.md  x86_64.md
docs/enterprise/: README.md  cnc-multiaxis.md  fleet-management.md  high-availability.md  profinet-ethernetip.md  scada-historian.md  security-compliance.md  vision-ai.md
docs/mintlify/: docs.json  mint.json
docs/mintlify/developers/: architecture.mdx
docs/mintlify/users/: database.mdx  installation.mdx  introduction.mdx  modbus-client.mdx  mqtt-client.mdx  oso-cli.mdx  scripts.mdx  service-manager.mdx
examples/: README.md
examples/dashboards/: README.md
examples/drivers/: README.md
examples/drivers/01-mqtt-light/: driver.json  map.json
examples/ladder/01-blink-led/: README.md
examples/ladder/02-tank-control/: README.md
examples/node-red/: 01-blink-led.json  README.md
examples/rest/: 01-blink-led.sh  02-poll-tags.sh
examples/scripts/bash/: 01-blink-led.sh
examples/scripts/node/: 01-blink-led.js
examples/scripts/python/: 01-blink-led.py  02-tank-control.py
examples/sql/: 01-blink-led.sql  02-tank-report.sql
examples/st/: 01-blink-led.st  02-tank-control.st
gateways/: README.md
gateways/home-assistant/: README.md
gateways/home-assistant/drivers/: README.md  alarm_control_panel.json  binary_sensor.json  button.json  climate.json  cover.json  device_tracker.json  fan.json  humidifier.json  input_boolean.json  input_number.json  input_select.json  light.json  lock.json  media_player.json  number.json  person.json  scene.json  select.json  sensor.json  siren.json  sun.json  switch.json  vacuum.json  valve.json  water_heater.json  weather.json
gateways/home-assistant/reference/: hass_bridge.py  hass_discover.py  hass_mapper.py  mapping.example.json
gateways/modbus/server/: server.py
gateways/mqtt/: database_manager.py  main.py  module.py  mqtt_manager.py
gateways/opc-ua/: README.md
gateways/opc-ua/reference/: osologic_opcua_server.py  verify_client.py
gateways/opc-ua/reference/cpp/: CMakeLists.txt  README.md  opcua_server.cpp
gateways/opc-ua/sql/: opcua_views.sql
hardware/: LICENSE  README.md
iec61131/: README.md
iec61131/ladder/osoLadder/: .gitignore  README.md  index.html  osocompile-cli.js  osocompile.js  osological.css  osological.js  osoplc.js
iec61131/st/osoST/: README.md
io/: README.md
io/drivers/: README.md  catalog.json  community-index.json
logos/: NOTICE  README.md
modules/: README.md  experimental
modules/core/: README.md
modules/experimental/: README.md
modules/main/: README.md
modules/main/OPC-UA/: README.md
os-dist/: README.md
os-dist/scripts/: img_extract.sh  img_flash.sh  ip_dhcp_forcer.sh  universal_chroot.sh
packaging/: INSTALL.md  README.md  config.example.json  install_OsoLogic.sh  oso-config  oso-setup  requirements.txt
packaging/lib/: oso-ui.sh
sandbox/: README.md  docker-compose.yml
sandbox/baremetal/: README.md  install.sh
sandbox/core/: Dockerfile  oso_core.py  requirements.txt
sandbox/db/: init.sql
sandbox/install/: README.md  get.ps1  get.sh  osologic-sandbox.bat  osologic-sandbox.command  osologic-sandbox.desktop
sandbox/node-red/: seed.sh
sandbox/web/: index.html
sdk/: README.md
sdk/c/: Makefile
sdk/python/: config_loader.py
standard/: LICENSE  README.md
standard/rfcs/: 0001-protocol-builder-and-integrations.md  0002-osologic-driver-model.md
tests/: README.md  all0.py  testall.py
ui/: README.md
ui/get-started/: db-access.html  index.html
ui/gui/: app.py
ui/gui/templates/: index.html  login.html
ui/hmi-web/: README.md
ui/hmi-web/html5-hmi/: README.md  index.html
ui/hmi-web/plant-manager/: README.md  (+2 more)
ui/ladder-editor/: README.md
ui/node-red/: README.md  flows.json  package.json
ui/services-manager/: app.py
ui/shared/: osodb-client.js
ui/st-editor/: README.md
ui/webmin-oso/: README.md  index.html
(+183 files in other folders)
